--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 <body>
 
     <h1>Hello git bash!! </h1>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Blanditiis delectus fuga quae dolorem dolor rerum necessitatibus soluta ut sint vero!</p>
     
 </body>
 </html>
