--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 
     <h1>Hello git bash!! </h1>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Blanditiis delectus fuga quae dolorem dolor rerum necessitatibus soluta ut sint vero!</p>
+    <h3>hello, i'm aminul islma . I am a professional front end developer. </h3>
     
 </body>
 </html>
