--- a/index.html
+++ b/index.html
@@ -10,6 +10,10 @@
     <h1>Hello git bash!! </h1>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Blanditiis delectus fuga quae dolorem dolor rerum necessitatibus soluta ut sint vero!</p>
     <h3>hello, i'm aminul islma . I am a professional front end developer. </h3>
+ 
+        <h1>This card is only for image slider</h1>
+
+
     
 </body>
 </html>
