--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <h3>hello, i'm aminul islma . I am a professional front end developer. </h3>
  
         <h1>This card is only for image slider</h1>
+    <p>This code is write for git pull</p>
 
 
     
